간단한 template engine 기능 구현